node-red/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
    spec:
      imagePullSecrets:
        - name: docker-hub-secret
      containers:
        - name: node-red
          image: isenne/nodered:latest
          imagePullPolicy: "Always"
          volumeMounts:
            - name: node-red-storage
              mountPath: /data
          ports:
            - containerPort: 1880
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: node-red-storage
          persistentVolumeClaim:
            claimName: node-red-lh-pvc
