node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
spec:
  ingressClassName: "caddy"
  rules:
    - host: nr.punter3.nl
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: node-red-service
                port:
                  number: 1880
